--- a/package.json
+++ b/package.json
@@ -17,16 +17,25 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:mi:up": "npm run typeorm migration:run -- -d ./src/providers/database/postgres/ormconfig.ts",
+    "typeorm:mi:g": "npm run typeorm -- -d ./src/providers/database/postgres/ormconfig.ts migration:generate ./src/providers/database/postgres/migrations/%npm_config_name%",
+    "typeorm:mi:c": "npm run typeorm -- migration:create ./src/providers/database/postgres/migrations/%npm_config_name%",
+    "typeorm:mi:down": "npm run typeorm -- -d ./src/providers/database/postgres/ormconfig.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
