--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ DB_DATABASE=
 DB_LOGGING=
 DB_MIGRATE=
 DB_SYNCHRONIZE=
+
+# Smtp config
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SECURE=
+SMTP_AUTH_USER=
+SMTP_AUTH_PASSWORD=
