--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
@@ -37,6 +38,7 @@
     "cache-manager": "^5.1.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
     "randomstring": "^1.2.3",
     "reflect-metadata": "^0.1.13",
@@ -52,6 +54,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
     "@types/randomstring": "^1.1.8",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
