Added rmq to emails

--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,6 @@ DB_LOGGING=
 DB_MIGRATE=
 DB_SYNCHRONIZE=
 
-# Smtp config
-SMTP_HOST=
-SMTP_PORT=
-SMTP_SECURE=
-SMTP_AUTH_USER=
-SMTP_AUTH_PASSWORD=
-
 # Jwt
 JWT_SECRET=
 
@@ -23,3 +16,9 @@ GOOGLE_DRIVE_CONFIG_PATH=
 AVATARS_FOLDER_ID=
 
 RATES_SERVICE_URL=
+
+#Rabbit
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_HOST=
+RABBITMQ_QUEUE_NAME=
