--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cache-manager": "^5.1.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "form-data": "^4.0.0",
     "googleapis": "^114.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.9.0",
